--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,4 +1,8 @@
 <nav class="navbar navbar-light" style="background-color: #3900f5;">
+  <a href=""><img src="./images/bicon.png" alt=""></a>
+  <a href="">
+      <h1 class="text-light ml-3">Cart</h1>
+  </a>
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Distriunidos</a>
