--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,27 +1,27 @@
-<nav class="navbar navbar-light" style="background-color: #3900f5;">
-  <a href=""><img src="./images/bicon.png" alt=""></a>
-  <a href="">
-      <h1 class="text-light ml-3">Cart</h1>
-  </a>
-    <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Distriunidos</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Catalogo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="#" class="navbar-img"><img src="./assets/images/Distriunidos.png" alt="" width="100"></a>
+  <div class="colapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a href="#" class="nav-link">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Ver Catalogo</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Iniciar Seccion</a>
+      </li>
+    </ul>  
+  </div>
 </nav>
+
+
+
+
+
+
+
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <a href=""><img src="./assets/images/bicon.png" alt="" width="30"></a>
+  <a href="#" class="navbar-nav">Distriunidos</a>
+</nav>  -->
