Implementado el header con el navbar

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,1 +1,25 @@
-<p>footer works!</p>
+<footer class="footer bg-light text-black py-4">
+    <div class="container">
+        <nav class="row">
+            <a href="#" class="col-3 text-reset text-uppercase d-flex align-items-center">
+                <img src="/assets/logos/Distriunidos.png" alt="Logo Distriunidos" class="img-logo" width="100">
+            </a>
+
+            <!-- menu -->
+            <ul class="col-3 list-unstyled mr-auto">
+              <li class="font-weight-bold text-uppercase">Informacion</li>
+              <li><a href="#" class="text-reset">Nosotros</a></li>
+              <li><a href="#" class="text-reset">Nuestros productos</a></li>
+            </ul>
+
+            <ul class="col-3 list-unstyled mr-auto">
+              <li class="font-weight-bold text-uppercase">Empleados</li>
+              <li><a href="#" class="text-reset">Iniciar Seccion</a></li>
+            </ul>
+        </nav>
+
+
+
+
+    </div>
+</footer>
