--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,1 +1,39 @@
-<p>header works!</p>
+<header class="header">
+  <div class="container vh-50">
+
+    <!-- Navbar -->
+    <nav class="row text-white justify-content-between align-items-center text-uppercase ">
+    <!-- Logo -->
+    <a href="#" class="col-auto text-reset">
+      <img src="./assets/logos/Distriunidos fondo.png" alt="Logo Distriunidos" class="img-logo">
+      Distriunidos
+    </a>
+    <!-- Anclas -->
+    <div class="col-auto">
+      <a href="#" class="text-reset pr-3">Inicio</a>
+      <a href="#" class="text-reset pr-3">Acerca de Nosotros</a>
+      <a href="#" class="text-reset pr-3">Productos</a>
+      <a href="#" class="text-reset">Contactanos</a>
+    </div>
+    </nav>
+    <!-- Descripcion -->
+    <div class="row h-100 align-items-center">
+      <div class="col-6 text-white">
+        <!-- titulo -->
+        <h1 class="text-capitalize">
+          <span class="text-warning h5">Tecnologia de punta</span> <br>
+          hasta tu puerta
+        </h1>
+        <!-- Descripcion -->
+        <p>
+          Somos una empresa encargada <br>
+          de brindarte la tecnologia mas reciente <br>
+          del mercado hasta la puerta de tu casa.
+        </p>
+        <!-- Btn -->
+        <a href="#" class="text-reset btn btn-warning botonCompra">Mira nuestros productos</a>
+      </div>
+    </div>
+  </div>
+  <img src="/assets/images/cut-header.svg" alt="">
+</header>
