--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<app-navbar></app-navbar>  
+<app-header></app-header>
+<!-- <div class="container">
+    <h1>
+      "Hola"
+    </h1>
 
+    <router-outlet></router-outlet>
+
+
+</div> -->
+<app-footer></app-footer>
 <!-- <app-cover></app-cover>    -->
