--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a href="#" class="navbar-img"><img src="./assets/images/Distriunidos.png" alt="" width="100"></a>
+  <a href="#" class="navbar-img"><img src="../assets/logos/Distriunidos.png" alt="" width="100"></a>
   <div class="colapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
@@ -8,10 +8,7 @@
       <li class="nav-item">
         <a href="#" class="nav-link">Ver Catalogo</a>
       </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link">Iniciar Seccion</a>
-      </li>
-    </ul>  
+    </ul>
   </div>
 </nav>
 
