Contenido grafico añadido

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
+
+<app-productos></app-productos>
 <!-- <div class="container">
     <h1>
       "Hola"
@@ -8,5 +10,5 @@
 
 
 </div> -->
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
 <!-- <app-cover></app-cover>    -->
