Pagina principal terminada faltan los modulos de administrador

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-light text-black py-4">
+<footer class="footer text-black py-4">
     <div class="container">
         <nav class="row">
             <a href="#" class="col-3 text-reset text-uppercase d-flex align-items-center">
