--- a/src/app/component/footer/footer.component.css
+++ b/src/app/component/footer/footer.component.css
@@ -1,6 +1,17 @@
 .footer{
-  position: absolute;
-  bottom: 0px;
+  /* position: absolute; */
+  /* margin-top: 100px; */
+  bottom: 100%;
   height: 100px;
   width: 100%;
+  
+}
+
+.container{
+  bottom: 100%;
+}
+
+.footer::after{
+  height: 1000px;
+  background-color: black;
 }
