--- a/src/app/component/productos/productos.component.css
+++ b/src/app/component/productos/productos.component.css
@@ -6,13 +6,13 @@
   transition-duration: .6s;
   clip-path: polygon(
     50% 0,
-    50% 0,
+    100% 0,
     100% 50%,
-    100% 50%,
+    100% 100%,
     50% 100%,
-    50% 100%,
-    0 50%
-    0 50%
+    0 100%,
+    0 50%,
+    0 0
     );
 
 }
@@ -25,15 +25,17 @@
     100% 50%,
     50% 100%,
     50% 100%,
-    0 50%
+    0 50%,
     0 50%
     );
 }
+
+
 
 .card-effect:hover .card-img-overlay{
   transform: scale(0.9);
 }
 
 .card-img-overlay {
-  transition-duration: 0.6s; 
+  transition-duration: 0.6s;
 }
