"Login, tabla de usuarios y proyecto en una sola pagina reconfigurado. Falta probar los metodos del backend"

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer text-black py-4">
+<div class="footer text-black">
     <div class="container">
         <nav class="row">
             <a href="#" class="col-3 text-reset text-uppercase d-flex align-items-center">
@@ -14,7 +14,7 @@
 
             <ul class="col-3 list-unstyled mr-auto">
               <li class="font-weight-bold text-uppercase">Empleados</li>
-              <li><a href="#" class="text-reset">Iniciar Seccion</a></li>
+              <li><a routerLink = '/DistriunidosConfig' class="text-reset">Iniciar Seccion</a></li>
             </ul>
         </nav>
 
@@ -22,4 +22,4 @@
 
 
     </div>
-</footer>
+</div>
