--- a/src/app/component/navbar/navbar.component.css
+++ b/src/app/component/navbar/navbar.component.css
@@ -5,23 +5,12 @@
   position: relative;
 }
 
-.container{
-  margin-top: 40px;
-}
 .img-logo{
+  margin-left: 0px; 
   width: 100px;
 }
 
-.usersPhoto{
-  width: 140px;
-  height: 140px;
-  justify-content: center;
-}
-
-.usuariosItem{
-  margin-top: 5px;
-}
-
-.productosItem{
-  margin-top: 5px;
+.text-reset{
+  margin-left: 10px;
+  margin-right: 10px;
 }
