--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,26 @@
-<app-header></app-header>
+<!-- <app-inicio></app-inicio> -->
+
+<app-navbar></app-navbar>
+<!-- <app-header></app-header>
+
+<app-navbar></app-navbar>
 
 <app-productos></app-productos>
+
+<app-marcas></app-marcas> -->
+
+<!-- <app-usuarios-panel></app-usuarios-panel> -->
+<router-outlet></router-outlet>
+
+<!-- <app-main-administrador></app-main-administrador> -->
 <!-- <div class="container">
     <h1>
       "Hola"
     </h1>
 
-    <router-outlet></router-outlet>
+
 
 
 </div> -->
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
 <!-- <app-cover></app-cover>    -->
