--- a/src/app/component/footer/footer.component.css
+++ b/src/app/component/footer/footer.component.css
@@ -1,17 +1,8 @@
 .footer{
-  /* position: absolute; */
-  /* margin-top: 100px; */
-  bottom: 100%;
-  height: 100px;
+  position: fixed;
+  padding: 10px 10px 0px 10px;
+  bottom: 0;
   width: 100%;
-  
-}
-
-.container{
-  bottom: 100%;
-}
-
-.footer::after{
-  height: 1000px;
-  background-color: black;
-}
+  background: grey;
+  margin-top: 40px;
+ }
