--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -13,7 +13,7 @@
       <a href="#" class="text-reset pr-3">Inicio</a>
       <a href="#" class="text-reset pr-3">Acerca de Nosotros</a>
       <a href="#" class="text-reset pr-3">Productos</a>
-      <a href="./main-administrador/main-administrador.component.html" class="text-reset" routerLink='/directivas'>Ingresar</a>
+      <a routerLink='/DistriunidosConfig' class="text-reset">Ingresar</a>
     </div>
     </nav>
     <!-- Descripcion -->
