--- a/src/app/component/marcas/marcas.component.css
+++ b/src/app/component/marcas/marcas.component.css
@@ -1,5 +1,10 @@
+* {
+  font-size: 1.0rem;
+}
+
 .container{
   margin-top: 40px;
+  margin-bottom: 200px;
 }
 
 .media-object-img{
@@ -16,7 +21,7 @@
 }
 
 .marcasText{
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .col-6{
