--- a/src/app/inicio/marcas/marcas.component.css
+++ b/src/app/inicio/marcas/marcas.component.css
@@ -1,7 +1,3 @@
-* {
-  font-size: 1.0rem;
-}
-
 .container{
   margin-top: 40px;
   margin-bottom: 200px;
@@ -26,4 +22,5 @@
 
 .col-6{
   align-items: center;
+  margin-bottom: 150px;
 }
