--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -14,7 +14,7 @@
 
             <ul class="col-3 list-unstyled mr-auto">
               <li class="font-weight-bold text-uppercase">Empleados</li>
-              <li><a routerLink = '/DistriunidosConfig' class="text-reset">Iniciar Seccion</a></li>
+              <li><a [routerLink]="['Login']" routerLinkActive="active" class="text-reset">Iniciar Seccion</a></li>
             </ul>
         </nav>
 
