--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,28 +1,23 @@
-<section class="container-fluid">
-    <section class="row">
-      <section class="col-12 col-sm-6 col-md-3">
-  
-        <form class="form-container">
-          <p class="h2 textoIngreso">Ingreso de usuarios</p>
-          <div class="mb-3">
-            <label for="inputCorreo">Correo</label>
-            <input type="email" class="form-control" id="inputCorreo" placeholder="Ingresa tu correo electronico">
-            <div id="emailHelp" class="form-text">Nunca compartiremos tu email.</div>
-          </div>
-          <div class="mb-3">
-            <label for="inputContraseña">Contraseña</label>
-            <input type="password" class="form-control" id="inputContraseña" placeholder="Ingresa tu contraseña">
-            <div id="passwordHelp" class="form-text">Recuerda nunca revelar tu contraseña.</div>
-          </div>
-          <div class="mb-3 form-check ">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-          </div>
-          <button type="Registrarse" class="btn botonRegistro ">Registrarse</button>
-          <button routerLink='/DistriunidosConfig' type="Ingresar" class="btn btn-primary botonInicio">Ingresar</button>
-        </form>
-  
-      </section>
-    </section>
-  </section>
-  
+<title>Ingreso de usuarios</title>
+<header class="header">
+  <div class="container vh-50">
+    <div class="login-box">
+      <img src="../assets/logos/Distriunidos fondo.png" alt="img-loging" class="img-logo">
+      <h1 class="text-reset">Ingrese aqui</h1>
+      <form action="">
+        <label for="Email" class="texto">Email</label>
+        <input type="text" placeholder="Ingrese su nombre de usuario">
+
+        <label for="Contraseña" class="texto">Contraseña</label>
+        <input type="password" placeholder="Ingrese su Contraseña">
+
+        <!-- (click)='s' -->
+        <button type="button"  name="aceptar" class="boton">aceptar</button>
+        <br>
+        <a href="" class="links">¿Olvidaste tu contraseña?</a><br>
+        <a href="" class="links">¿No tienes cuenta?. Registrate aqui</a>
+      </form>
+
+    </div>
+  </div>
+</header>
