--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,7 +13,7 @@
       <a href="#" class="text-reset pr-3">Inicio</a>
       <a href="#" class="text-reset pr-3">Acerca de Nosotros</a>
       <a href="#" class="text-reset pr-3">Productos</a>
-      <a [routerLink]="['Login']" routerLinkActive="active" class="text-reset">Ingresar</a>
+      <a [routerLink]="['/Login']" routerLinkActive="active" class="text-reset">Ingresar</a>
     </div>
     </nav>
     <!-- Descripcion -->
